Define htonll and ntohll on Windows in case they are not defined
This allows building in MinWG

--- a/include/CMakeLists.txt
+++ b/include/CMakeLists.txt
@@ -117,6 +117,7 @@ elseif(WIN32)
     ${link_platform_DIR}/stl/Random.hpp
     ${link_platform_DIR}/windows/Clock.hpp
     ${link_platform_DIR}/windows/ScanIpIfAddrs.hpp
+    ${link_platform_DIR}/windows/Windows.hpp
   )
 endif()
 set(link_platform_HEADERS
